--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "dependencies": {
     "daisyui": "^2.0.9",
     "depcheck": "^1.4.3",
+    "tailwind-scrollbar": "^1.3.1",
     "tw-elements": "^1.0.0-alpha12"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "tailwind-scrollbar": "^1.3.1"
   }
 }
