Settings and environment variables for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-SECRET_KEY = 'django-insecure-5+7dtxe3%%+rlvoejx2_*&no354o+a7ve^p9v*ozb7*gokty!v'
+SECRET_KEY='django-insecure-5+7dtxe3%%+rlvoejx2_*&no354o+a7ve^p9v*ozb7*gokty!v'
 
-CELERY_BROKER_URL = 'redis://127.0.0.1:6379'
-CELERY_RESULT_BACKEND = 'redis://127.0.0.1:6379'
+DATABASE_URL='postgres://127.0.0.1:5432'
+
+REDIS_URL='redis://127.0.0.1:6379'
+
+EMAIL_HOST_USER='user@gmail.com'
+
+EMAIL_HOST_PASSWORD='12345'
