Implement recaptcha on forms

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ REDIS_URL='redis://127.0.0.1:6379'
 EMAIL_HOST_USER='user@gmail.com'
 
 EMAIL_HOST_PASSWORD='12345'
+
+RECAPTCHA_SITE_KEY='AAAAAAAAAAAAAAAAAAAAAAA'
+
+RECAPTCHA_SECRET_KEY='ZZZZZZZZZZZZZZZZZZZZZZZZ'
